[EagerAppCDS] fix testcase LoadWithCustomClassLoader.java
Summary:

Test Plan: ci jtreg cds+quickstart

Reviewed-by: lingjun-cg, yuleil